feat: criando variaveis de cores

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,8 @@
       "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@helpers/*": ["src/helpers/*"]
+      "@helpers/*": ["src/helpers/*"],
+      "@styles/*": ["src/styles/*"]
     }
   },
   "include": ["src"]
