--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,7 +27,9 @@
       "@pages/*": ["src/pages/*"],
       "@hooks/*": ["src/hooks/*"],
       "@helpers/*": ["src/helpers/*"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@redux/*": ["src/redux/*"],
+      "@/types/*": ["src/@types/*"]
     }
   },
   "include": ["src"]
