feat: listagem de dragões

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,7 +29,8 @@
       "@helpers/*": ["src/helpers/*"],
       "@styles/*": ["src/styles/*"],
       "@redux/*": ["src/redux/*"],
-      "@/types/*": ["src/@types/*"]
+      "@/types/*": ["src/@types/*"],
+      "@/services/*": ["src/services/*"]
     }
   },
   "include": ["src"]
