--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
+    "esModuleInterop": true,
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -21,17 +21,19 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "baseUrl": "./",
+    "baseUrl": "src",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@pages/*": ["src/pages/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@helpers/*": ["src/helpers/*"],
-      "@styles/*": ["src/styles/*"],
-      "@redux/*": ["src/redux/*"],
-      "@/types/*": ["src/@types/*"],
-      "@/services/*": ["src/services/*"]
+      "@/*": ["./*"],
+      "@assets/*": ["assets/*"],
+      "@redux/*": ["redux/*"],
+      "@helpers/*": ["helpers/*"],
+      "@components/*": ["components/*"],
+      "@hooks/*": ["hooks/*"],
+      "@styles/*": ["styles/*"],
+      "@pages/*": ["pages/*"],
+      "@/types/*": ["@types/*"],
+      "@services/*": ["services/*"],
     }
   },
-  "include": ["src"]
+  "include": ["src", "setupTests.ts", "**/*.test.tsx"]
 }
